Add functions and objects section

--- a/bases/index.html
+++ b/bases/index.html
@@ -7,6 +7,6 @@
     <title>Bases de TypeScript</title>
 </head>
 <body>
-    <script src="types/enums.js"></script>
+    <script src="functions/function-types.js"></script>
 </body>
 </html>
