Add objects and custom types

--- a/bases/index.html
+++ b/bases/index.html
@@ -7,6 +7,6 @@
     <title>Bases de TypeScript</title>
 </head>
 <body>
-    <script src="functions/function-types.js"></script>
+    <script src="objects/objects.js"></script>
 </body>
 </html>
